# cheviot-drivers

./: Makefile.am  Makefile.in  README.md  configure  configure.ac  configure~
aux/: Makefile.am  Makefile.in  aux_uart.h  aux_uart_hw.c  aux_uart_hw.h  globals.c  globals.h  init.c  main.c
aux/boards/raspberry_pi_1/: aux_uart.c  aux_uart.h  common.h  gpio.h  peripheral_base.h
aux/boards/raspberry_pi_4/: aux_uart.c  aux_uart.h  aux_uart_hw.h  common.h  gpio.c  gpio.h  peripheral_base.h
echo/: Makefile.am  Makefile.in  echo.h  globals.c  globals.h  init.c  main.c
genet/: Makefile.am  Makefile.in  init.c  main.c  null.h
gpio/: Makefile.am  Makefile.in  globals.c  globals.h  gpio.h  init.c  main.c
mailbox/: Makefile.am  Makefile.in  globals.c  globals.h  init.c  mailbox.c  mailbox.h  mailbox_clock.c  mailbox_power.c  main.c
null/: Makefile.am  Makefile.in  globals.c  globals.h  init.c  main.c  null.h
random/: Makefile.am  Makefile.in  globals.c  globals.h  init.c  main.c  random.h  trng_hw.c  trng_hw.h
random/boards/raspberry_pi_4/: peripheral_base.h  trng.c  trng.h
sdcard/: Makefile.am  Makefile.in  debug.c  emmc.c  emmc_globals.c  emmc_init.c  emmc_internal.h  emmc_misc.c  emmc_rw.c  globals.c  globals.h  init.c  main.c  mmio.c  mmio.h  profiling.c  sdcard.h  timer.c  timer.h  util.h
sdcard/boards/raspberry_pi_1/: peripheral_base.h
sdcard/boards/raspberry_pi_4/: peripheral_base.h
serial/: Makefile.am  Makefile.in  globals.c  globals.h  init.c  main.c  pl011.h
serial/boards/raspberry_pi_1/: gpio.c  gpio.h  peripheral_base.h  pl011_uart.c  pl011_uart.h
serial/boards/raspberry_pi_4/: gpio.c  peripheral_base.h  pl011_uart.c  pl011_uart.h
sysinfo/: Makefile.am  Makefile.in  globals.c  globals.h  init.c  main.c  sysinfo.h
tty/: Makefile.am  Makefile.in  globals.c  globals.h  init.c  main.c  tty.h
